# vibecheck

./: .env.example  AGENTS.md  CLAUDE.md  README.md  VibeCheckMVP.mmd  Vishv_prompt.md  advik-prompt-sources.md  finalized_MVP_spec.md  mcp-servers.json  opencode.json  pyproject.toml  qa_loop_prompt.md
.github/workflows/: ci.yml  cicd.yml
cli/: auth.py  cc_init.py  cm_init.py  main.py
core/: __init__.py  competence_store.py  concept_resolver.py  concept_taxonomy.py  config.py  context_aggregation.py  diffs.py  errors.py  gate.py  llm.py  llm_adapter.py  models.py  normalize.py
demo/: README.md  step0_setup.sh  step2_reset_low.sh  step4_live_claude.sh
docs/: gate_branch_validation.md  next_steps.md  p4_overnight_summary.md  publish_steps.md
docs/blaisenotes/: nightly_debrief_person4.md  person4_e2e_reliability_ux_checklist.md
docs/p4_notes/: dep_proposals.md  event_logging.md  failure_modes.md  mcp_findings.md  test_coverage.md  ux_decision.md
docs/specs/: graph_competence_model.md
hooks/: README.md  __init__.py  decision_output.py  pre_tool_use.py  stdin_payload.py
prompts/: GPT-prompt.md  VibeCheck-Claude-Optimized.md  claude-write-gate-mvp.md  combined_skeleton_prompt.md  deep-research-reaults.md  mermaid_and_pitch.md  plannonator_insights.md  unified_mvp_spec.md
qa/: README.md  __init__.py  competence_updates.py  evaluation.py  gradio_renderer.py  init_survey.py  llm_wrapper.py  loop.py  question_generation.py  renderer_selection.py  terminal_renderer.py
state/: README.md  competence_model.yaml  default_concept_graph.yaml
state/agg/: current_attempt.md
state/logs/: events.jsonl
tests/: test_cc_init.py  test_cli.py  test_concept_resolver.py  test_concept_taxonomy.py  test_config.py  test_context_aggregation.py  test_decision_output.py  test_failure_modes.py  test_gate.py  test_normalize.py  test_openai_client.py  test_pre_tool_use.py  test_qa_loop.py  test_replay_fixtures.py
tests/fixtures/: 01_small_write_allow.json  02_large_write_block_pass.json  03_large_write_block_fail_limit.json  04_malformed_payload.json  05_non_mutation_bypass.json
vibecheck_hoohacks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
