[project]
name = "vibecheck"
version = "0.1.0"
description = "Competence-aware guardrail scaffold for AI-assisted coding"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.79",
    "langchain-openrouter>=0.1.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.pyright]
include = ["core", "hooks", "qa", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
